--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.5",
